--- a/src/python/shader-file-structure.yaml
+++ b/src/python/shader-file-structure.yaml
@@ -39,3 +39,20 @@ groups:
         fragment: 'wave-normal-map.glsl'
         template: 'wave-normal-map-template.txt'
         material: 'wave-normal-map.js'
+  -
+    base_glsl_dir: '../glsl/ocean-material'
+    base_js_dir: '../js/ocean-system/materials/ocean-material'
+    shaders:
+      -
+        fragment: 'foam.glsl'
+        template: 'foam-template.txt'
+        material: 'foam.js'
+      -
+        fragment: 'jacobian.glsl'
+        template: 'jacobian-template.txt'
+        material: 'jacobian.js'
+      -
+        fragment: 'water-shader.glsl'
+        vertex:   'water-vertex.glsl'
+        template: 'water-shader-template.txt'
+        material: 'water-shader.js'
