Got the new ocean material working so that it has reflection, refraction and absorption. It uses the Schlick approximation for the Fresnel amounts of reflection and refraction and implements a Bayer Matrix to avoid dithering.

--- a/src/python/shader-file-structure.yaml
+++ b/src/python/shader-file-structure.yaml
@@ -52,6 +52,11 @@ groups:
         template: 'jacobian-template.txt'
         material: 'jacobian.js'
       -
+        fragment: 'position-pass.glsl'
+        vertex:   'position-pass-vertex.glsl'
+        template: 'position-pass-template.txt'
+        material: 'position-pass.js'
+      -
         fragment: 'water-shader.glsl'
         vertex:   'water-vertex.glsl'
         template: 'water-shader-template.txt'
